[gd_scene load_steps=4 format=3 uid="uid://bhw85att0c57b"]

[ext_resource type="Script" path="res://addons/zalance/item/item.gd" id="1_4qg72"]
[ext_resource type="Theme" uid="uid://b3jrk0l218vf6" path="res://addons/zalance/zalance_theme.tres" id="2_btiyw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qcmq6"]

[node name="Item" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_4qg72")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemImage" type="TextureRect" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PanelMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="PanelVBox" type="VBoxContainer" parent="VBoxContainer/PanelMargin"]
layout_mode = 2

[node name="TitleMargin" type="MarginContainer" parent="VBoxContainer/PanelMargin/PanelVBox"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 5

[node name="ItemTitle" type="Label" parent="VBoxContainer/PanelMargin/PanelVBox/TitleMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Item Name Item Name Item Name "
horizontal_alignment = 1
autowrap_mode = 2

[node name="PriceMarginContainer" type="MarginContainer" parent="VBoxContainer/PanelMargin/PanelVBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20

[node name="ItemButton" type="Button" parent="VBoxContainer/PanelMargin/PanelVBox/PriceMarginContainer"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_qcmq6")
layout_mode = 2
theme = ExtResource("2_btiyw")
theme_override_font_sizes/font_size = 25
text = "$1.99"

[connection signal="pressed" from="VBoxContainer/PanelMargin/PanelVBox/PriceMarginContainer/ItemButton" to="." method="_on_item_button_pressed"]
